--- a/frontend/stylesheets/chaipcrui.css.scss
+++ b/frontend/stylesheets/chaipcrui.css.scss
@@ -555,3 +555,84 @@ span.stage-num-cycles .textinput, span.step-temperature .textinput, span.step-ho
     }
   }
 }
+
+// Three dot animation
+$dot-width: 16px !default;
+$dot-height: 16px !default;
+$dot-radius: $dot-width * .5 !default;
+
+$dot-color: #444 !default;
+$dot-bg-color: $dot-color !default;
+$dot-before-color: $dot-color !default;
+$dot-after-color: $dot-color !default;
+
+$dot-spacing: $dot-width + $dot-width * .5 !default;
+
+@mixin dot(
+  $width: $dot-width,
+  $height: $dot-height,
+  $radius: $dot-radius,
+  $bg-color: $dot-bg-color,
+  $color: $dot-color
+) {
+  width: $width;
+  height: $height;
+  border-radius: $radius;
+  background-color: $bg-color;
+  color: $color;
+}
+
+$r: 16px;
+$origin-x: 8px;
+$origin-y: 8px + $r;
+
+.dot-windmill {
+  position: relative;
+  top: - $r;
+
+  @include dot;
+
+  transform-origin: $origin-x $origin-y;
+  animation: dot-windmill 2s infinite linear;
+
+  &::before,
+  &::after {
+    content: '';
+    display: inline-block;
+    position: absolute;
+  }
+
+  &::before {
+    left: -($r * .5 * 1.732508); // √3
+    top: $r + $r * .5;
+
+    @include dot($bg-color: $dot-before-color);
+  }
+
+  &::after {
+    left: $r * .5 * 1.732508; // √3
+    top: $r + $r * .5;
+
+    @include dot($bg-color: $dot-after-color);
+  }
+}
+
+@keyframes dot-windmill {
+  0% {
+    transform: rotateZ(0deg) translate3d(0, 0, 0);
+  }
+
+  100% {
+    transform: rotateZ(720deg) translate3d(0, 0, 0);
+  }
+}
+
+.loading-animation{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  padding: 150px 0 32px 0;
+  margin: 0 -5%;
+  overflow: hidden;  
+}
