--- a/frontend/stylesheets/home-page.css.scss
+++ b/frontend/stylesheets/home-page.css.scss
@@ -2,10 +2,11 @@
 @import "./colors.css.scss";
 .home-page-wrapper {
   height: 100%;
-  min-height: 360px;
+  min-height: calc(100vh - 40px);
   position: relative;
   margin: 0 !important;
   padding: 0 !important;
+  display: flex;
   .status-bar {
     position: fixed;
     left: 0px;
@@ -21,7 +22,11 @@
     width: 60%;
     margin: 0;
     padding: 0;
-    padding-bottom: 50px;
+    padding-bottom: 80px;
+    z-index: 10;
+    box-shadow: 1px -4px 4px rgba(0, 0, 0, 0.25);
+    min-height: calc(100vh - 40px);
+
     .home-page-new-logo {
       width: 292px;
       height: 180px;
@@ -105,6 +110,8 @@
     width: 40%;
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
     .home-page-exp-messages {
       text-align: center;
       padding-top: 10px;
@@ -112,7 +119,7 @@
     .home-page-exp-header-container {
       width: 100%;
       height: 64px;
-      background-color: #333;
+      background-color: #444;
     }
     .home-page-recent-exp {
       width: 60%;
@@ -152,12 +159,15 @@
       border-left: 1px solid #e6e6e6;
       width: 100%;
       //height: 804px;
-      overflow-y: scroll;
+      overflow-y: auto;
       overflow-x: hidden;
       position: relative;
+      background: #fbfbfb;
         // height: calc(100vh - 104px);
+      height: 100%;
+      max-height: calc(100vh - 104px);
       .exp-list-container {
-        height: calc(100vh - 104px);
+        height: calc(100% - 64px);
       }
     }
     .home-page-exp-tile {
