change loading animation color

--- a/frontend/stylesheets/loading-blue.scss
+++ b/frontend/stylesheets/loading-blue.scss
@@ -1,7 +1,7 @@
 @import './colors.css.scss';
 
 .loading-blue {
-    border: 5px solid $blue;
+    border: 5px solid #dbdbdb;
     border-radius: 30px;
     display: inline-block;
     height: 30px;
