remove external resources

--- a/frontend/javascripts/app/views/samples-targets.html
+++ b/frontend/javascripts/app/views/samples-targets.html
@@ -27,7 +27,7 @@ limitations under the License.
     </header-status>
     <div class="inner-wrapper">
       <div class="inner-container">
-        <div class="home-page-wrapper row">
+        <div class="home-page-wrapper row d-block">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 header-samples-targets">
               <h4 style="display:inline-block">Manage Samples + Targets</h4>
               <!-- <span ng-click="openImportStandards()" class="import-button">Import Standards</span> -->
